Update endpoints and handler
